fixed responsiveness on iphone

--- a/app/assets/stylesheets/components/_grid.scss
+++ b/app/assets/stylesheets/components/_grid.scss
@@ -18,6 +18,7 @@
   .grid-container {
     img {
       height: fit-content;
+      width: 80vw;
       max-width: 100%;
     }
   }
